# definitions_of_forms

./: .flake8  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  rebuild.sh
app/: data_type_detector.py  database.py  main.py  routes.py  schemas.py  template_service.py
templates/: templates.json
tests/: test.py  test_templates.json
